--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Fútbol Libre TV
 </div>
 <div class="card-body">
 <ul class="list-unstyled mt-3 mb-4">
-<a href="/en-vivo/tnt-sports-online/"><img src="../img/logo-canal/TNT_Sports.png" title="Ver TNT Sports Premium Online en VIVO y en directo" alt="Logo de TNT Sports Premium" width="204"></a>
+<a href="/en-vivo/tnt-sports-online/"><img src="../img/logo-canal/TNT_Sports.webp" title="Ver TNT Sports Premium Online en VIVO y en directo" alt="Logo de TNT Sports Premium" width="204"></a>
 <li>Ver <strong>TNT Sports Premium</strong> online en vivo y en directo</li>
 </ul>
 <a href="/en-vivo/tnt-sports-online/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
@@ -110,7 +110,8 @@ Fútbol Libre TV
 <h2 class="my-3 font-weight-normal">ESPN Premium</h2>
 </div>
 <div class="card-body">
-<a href="/en-vivo/espn-premium/"><img src="../img/logo-canal/ESPN_Premium.png" title="Ver ESPN Premium online en VIVO" alt="Logo de ESPN Premium" width="204"></a>
+<a href="/en-vivo/espn-premium/"><img src="../img/logo-canal/espn_premium.png
+" title="Ver ESPN Premium online en VIVO" alt="Logo de ESPN Premium" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
 <li>Ver <strong>ESPN Premium</strong> online en vivo y en directo</li>
 </ul>
@@ -119,32 +120,9 @@ Fútbol Libre TV
 </div>
 	
 	
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h2 class="my-3 font-weight-normal">DirecTV Sports</h2>
-</div>
-<div class="card-body">
-<a href="/en-vivo/directv-sports/"><img src="../img/logo-canal/DirecTV_Sports.png" title="Ver DirecTV Sports en VIVO" alt="Logo de DirecTV Sports" width="204"></a>
-<ul class="list-unstyled mt-3 mb-4">
-<li>Ver <strong>DirecTV Sports</strong> online en vivo y en directo</li>
-</ul>
-<a href="/en-vivo/directv-sports/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
-</div>
-</div>
 	
 	
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h2 class="my-0 font-weight-normal">Eventos Star Plus</h2>
-</div>
-<div class="card-body">
-<a href="https://librefutboltv.com/star-plus/"><img src="../img/logo-canal/logo-starplus.png" title="Ver Star Plus en VIVO y en DIRECTO" alt="Logo de Star Plus" width="164"></a>
-<ul class="list-unstyled mt-3 mb-4">
-<li>Ver <strong>Eventos Star Plus</strong> online en vivo y en directo</li>
-</ul>
-<a href="https://librefutboltv.com/star-plus/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
-</div>
-</div>
+
 
 	
 	
@@ -153,7 +131,7 @@ Fútbol Libre TV
 <h2 class="my-0 font-weight-normal">Fox Sports 1</h2>
 </div>
 <div class="card-body">
-<a href="/en-vivo/fox-sports-1/"><img src="../img/logo-canal/Fox-Sports.png" title="Ver Fox Sports 1 en VIVO y en directo" alt="Logo de Fox Sports 1 online" width="204"></a>
+<a href="/en-vivo/fox-sports-1/"><img src="../img/logo-canal/Fox_Sports.png" title="Ver Fox Sports 1 en VIVO y en directo" alt="Logo de Fox Sports 1 online" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
 <li>Ver <strong>Fox Sports 1</strong> online en vivo y en directo</li>
 </ul>
@@ -165,7 +143,7 @@ Fútbol Libre TV
 <h2 class="my-0 font-weight-normal">Fox Sports 2</h2>
 </div>
 <div class="card-body">
-<a href="/en-vivo/fox-sports-2/"><img src="../img/logo-canal/Fox-Sports-2.png" title="Ver Fox Sports 2 en VIVO" alt="Logo de Fox Sports 2" width="204"></a>
+<a href="/en-vivo/fox-sports-2/"><img src="../img/logo-canal/Fox_Sports_2.png" title="Ver Fox Sports 2 en VIVO" alt="Logo de Fox Sports 2" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
 <li>Ver <strong>Fox Sports 2</strong> online en vivo y en directo</li>
 </ul>
@@ -177,7 +155,7 @@ Fútbol Libre TV
 <h2 class="my-0 font-weight-normal">Fox Sports 3</h2>
 </div>
 <div class="card-body">
-<a href="/en-vivo/fox-sports-3/"><img src="../img/logo-canal/Fox-Sports-3.png" title="Ver Fox Sports 3 en VIVO" alt="Logo de Fox Sports 3" width="204"></a>
+<a href="/en-vivo/fox-sports-3/"><img src="../img/logo-canal/Fox_Sports_2.png" title="Ver Fox Sports 3 en VIVO" alt="Logo de Fox Sports 3" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
 <li>Ver <strong>Fox Sports 3</strong> online en vivo y en directo</li>
 </ul>
@@ -225,7 +203,7 @@ Fútbol Libre TV
 <h2 class="my-0 font-weight-normal">ESPN Extra</h2>
 </div>
 <div class="card-body">
-<a href="/en-vivo/espn-extra/"><img src="../img/logo-canal/ESPN_Extra.png" title="Ver ESPN Extra en VIVO" alt="Logo de ESPN Extra" width="204"></a>
+<a href="/en-vivo/espn-extra/"><img src="../img/logo-canal/ESPN_Extra_new.png" title="Ver ESPN Extra en VIVO" alt="Logo de ESPN Extra" width="204"></a>
 <ul class="list-unstyled mt-3 mb-5">
 <li>Ver <strong>ESPN Extra</strong> online en vivo y en directo</li>
 </ul>
@@ -233,70 +211,19 @@ Fútbol Libre TV
 </div>
 </div>
 	
-	<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h2 class="my-0 font-weight-normal">DirecTV Sports 2</h2>
-</div>
-<div class="card-body">
-<a href="/en-vivo/directv-sports-2/"><img src="../img/logo-canal/DirecTV_Sports_2.png" title="Ver DirecTV Sports 2 en VIVO" alt="Logo de DirecTV Sports" width="204"></a>
-<ul class="list-unstyled mt-3 mb-4">
-<li><strong>DirecTV Sports 2</strong> online en vivo y en directo</li>
-</ul>
-<a href="/en-vivo/directv-sports-2/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
-</div>
-</div>
 
-	
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h2 class="my-0 font-weight-normal">Win Sports Premium</h2>
-</div>
-<div class="card-body">
-<ul class="list-unstyled mt-3 mb-4">
-<a href="/en-vivo/win-sports-premium/"><img src="../img/logo-canal/Win_Sports_Premium.webp?" title="Ver Win Sports Premium en VIVO" alt="Logo de Win Sports + (mas) Premium" width="204"></a>
-<li>Ver <strong>Win Sports Premium</strong> online en vivo y en directo</li>
-</ul>
-<a href="/en-vivo/win-sports-premium/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
-</div>
-</div>
+
+
 	
 		
-	
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h2 class="my-0 font-weight-normal">TNT Sports HD Chile</h2>
-</div>
-<div class="card-body">
-<a href="/en-vivo/tnt-sports-chile/"><img src="../img/logo-canal/TNT_Sports_Ch.png" title="Ver TNT Sports HD Chile CDF Premium en VIVO Chile" alt="Logo de TNT Sports HD Chile CDF Premium Chile" width="204"></a>
-<ul class="list-unstyled mt-3 mb-4">
-<li>Ver <strong>TNT Sports HD Chile</strong> online en vivo y en directo</li>
-</ul>
-<a href="/en-vivo/tnt-sports-chile/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
-</div>
-</div>
 
-	
-	
-
-<div class="card mb-4 box-shadow">
-<div class="card-header">
-<h2 class="my-0 font-weight-normal">DirecTV Sports + Plus</h2>
-</div>
-<div class="card-body">
-<a href="/en-vivo/directv-sports-plus/"><img src="../img/logo-canal/DirecTV_Sports_Plus.png" title="Ver DirecTV Sports + en VIVO" alt="Logo de DirecTV Sports" width="204"></a>
-<ul class="list-unstyled mt-3 mb-4">
-<li><strong>DirecTV Sports + Plus</strong> online en vivo y en directo</li>
-</ul>
-<a href="/en-vivo/directv-sports-plus/"><button type="button" class="btn btn-lg btn-block btn-fl">Ver canal</button></a>
-</div>
-</div>
 	
 <div class="card mb-4 box-shadow">
 <div class="card-header">
 <h2 class="my-0 font-weight-normal">TV Pública</h2>
 </div>
 <div class="card-body">
-<br><a href="/en-vivo/tv-publica/"><img src="../img/logo-canal/TV_Publica.png" title="Ver TV Pública en VIVO" alt="Logo de la TV Pública" width="204"></a>
+<br><a href="/en-vivo/tv-publica/"><img src="../img/logo-canal/TV_Publica.webp" title="Ver TV Pública en VIVO" alt="Logo de la TV Pública" width="204"></a>
 <ul class="list-unstyled mt-3 mb-4">
 <li><strong>TV Pública</strong>  online en vivo y en directo</li>
 </ul>
