--- a/index.html
+++ b/index.html
@@ -59,15 +59,45 @@
 <style type="text/css">@media screen and (min-width:0px) and (max-width:767px){.iframe-container iframe{height:266px}}</style>
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
 
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="#"><img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="#">ESPN</a></li>
+                    <li><a href="#">Tyc Sports</a></li>
+                    <li><a href="#">DS Sports</a></li>
+                    <li><a href="#">ESPN Premium</a></li>
+                    <li><a href="#">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
 <p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de stream para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Champions League entre otros. </p>
