--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
 <nav>
-        <div class="nav-bar">
+        <div class="navbar">
             <i class='bx bx-menu sidebarOpen' ></i>
             <span class="logo navLogo"><a href="#"><img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
             <div class="menu">
