--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta name="a.validate.01" content="70b5cf93cb06885b672c863136df48ba186f" />
 <meta property="og:locale" content="es_AR" />
 <meta property="og:type" content="website" />
+	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:title" content="Fútbol Libre TV - Ver canales de futbol argentino online en vivo y en directo gratis" />
 <meta property="og:description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC." />
 <meta property="og:url" content="https://librefutboltv.com/" />
