--- a/index.html
+++ b/index.html
@@ -323,7 +323,45 @@
 	
 <div><p align="left"><h2>¿Qué partidos de fútbol transmite Fútbol Libre?</h2></p>
 <p align="left">En <strong>Fútbol Libre</strong> se podran ver todos los partidos del futbol argentino que incluyen los de <strong>Boca Juniors</strong> y <strong>River Plate</strong> por el campeonato Argentino, Copa Libertadores y Copa Sudamericana. </p><br /></div>
-
+<script>
+		const body = document.querySelector("body"),
+			  nav = document.querySelector("nav"),
+			  modeToggle = document.querySelector(".dark-light"),
+			  searchToggle = document.querySelector(".searchToggle"),
+			  sidebarOpen = document.querySelector(".sidebarOpen"),
+			  siderbarClose = document.querySelector(".siderbarClose");
+			  let getMode = localStorage.getItem("mode");
+				  if(getMode && getMode === "dark-mode"){
+					body.classList.add("dark");
+				  }
+		// js code to toggle dark and light mode
+			  modeToggle.addEventListener("click" , () =>{
+				modeToggle.classList.toggle("active");
+				body.classList.toggle("darkk");
+				// js code to keep user selected mode even page refresh or file reopen
+				if(!body.classList.contains("darkk")){
+					localStorage.setItem("mode" , "lightt-mode");
+				}else{
+					localStorage.setItem("mode" , "darkk-mode");
+				}
+			  });
+		// js code to toggle search box
+				searchToggle.addEventListener("clickk" , () =>{
+				searchToggle.classList.toggle("activee");
+			  });
+		 
+			  
+		//   js code to toggle sidebar
+		sidebarOpen.addEventListener("click" , () =>{
+			nav.classList.add("active");
+		});
+		body.addEventListener("click" , e =>{
+			let clickedElm = e.target;
+			if(!clickedElm.classList.contains("sidebarOpen") && !clickedElm.classList.contains("menu")){
+				nav.classList.remove("active");
+			}
+		});
+		</script>
 
 <br />
 <div class="sharethis-inline-share-buttons"></div>
