--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <nav>
         <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen' ></i>
-            <span class="logo navLogo"><a href="#"><img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
             <div class="menu">
                 <div class="logo-toggle">
                     <span class="logo"><a href="#"><img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
