--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://librefutboltv.com/" />
+<link rel="canonical" href="https://futbollibretv.net/" />
 <meta content='INDEX, FOLLOW' name='ROBOTS'>
 <meta name="referrer" content="always">
 <meta name="description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC.">
@@ -14,13 +14,13 @@
 	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <meta property="og:title" content="Fútbol Libre TV - Ver canales de futbol argentino online en vivo y en directo gratis" />
 <meta property="og:description" content="En Futbol Libre TV podes ver fútbol Argentino gratis online en vivo y en directo, Copa Libertadores, Copa Sudamericana, partidos de Boca Juniors y River Plate, canales de Fox Sports Premium, TNT Sports, ESPN, DIRECTV y TyC." />
-<meta property="og:url" content="https://librefutboltv.com/" />
+<meta property="og:url" content="https://futbollibretv.net/" />
 <meta property="og:site_name" content="Fútbol Libre TV Online en VIVO y en directo" />
-<meta property="og:image" content="https://librefutboltv.com/img/Amistosos.png">
+<meta property="og:image" content="https://futbollibretv.net/img/Amistosos.png">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="Ver canales de futbol argentino online en vivo y en directo gratis, Liga Profesional de Fútbol, Copa Diego Maradona, Copa Argentina, Copa Libertadores, Sudamericana, River Plate y Boca Juniors" />
 <meta name="twitter:title" content="Fútbol Libre TV - Partidos y canales online en vivo y en directo" />
-<meta name="twitter:image" content="https://librefutboltv.com/img/logo-futbolLibre.png" />
+<meta name="twitter:image" content="https://futbollibretv.net/img/logo-futbolLibre.png" />
 <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
@@ -56,7 +56,7 @@
 </style>
 
 <link href="../css/portada.css" rel="stylesheet">
-<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/librefutboltv.com\/","name":"Fútbol Libre TV"}</script>
+<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/futbollibretv.net\/","name":"Fútbol Libre TV"}</script>
 <style type="text/css">@media screen and (min-width:0px) and (max-width:767px){.iframe-container iframe{height:266px}}</style>
 </head>
 <body>
@@ -66,7 +66,7 @@
             <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
             <div class="menu">
                 <div class="logo-toggle">
-                    <span class="logo"><a href="#"><img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <span class="logo"><a href="#"><img src="https://futbollibretv.net/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
                     <i class='bx bx-x siderbarClose'></i>
                 </div>
                 <ul class="nav-links">
@@ -105,7 +105,7 @@
 </div>
 <div class="container">
 <div class="iframe-container">
-<iframe allowfullscreen="true" scrolling="auto" src="https://librefutboltv.com/agenda/" frameborder="0" width="100%" height="600"></iframe>
+<iframe allowfullscreen="true" scrolling="auto" src="https://futbollibretv.net/agenda/" frameborder="0" width="100%" height="600"></iframe>
 </div>
 <br>
 <p class="display-5 text-center">Ver Canales de futbol online en vivo y en directo</p>
@@ -311,13 +311,13 @@
 <p align="left"><h2>Preguntas frecuentes</h2></p><br />
 	
 <div><p align="left"><h2>¿Qué es Fútbol Libre TV?</h2></p>
-<p align="left"><a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales gratis en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br /></div>
+<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales gratis en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br /></div>
 	
 <div><p align="left"><h2>¿Cómo ver un partido por fútbol libre TV en vivo y en directo?</h2></p>
-	<p align="left"> Para ver <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br /></div>
+	<p align="left"> Para ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br /></div>
 	
 <div><p align="left"><h2>¿Cómo ver fútbol libre TV en vivo desde la computadora / PC o desde el celular?</h2></p>
-<p align="left">Para poder ver <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a librefutboltv.com desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br /></div>
+<p align="left">Para poder ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> desde la computadora o el celular solo debes ingresar a futbollibretv.net desde Android o Iphone iOS y elegir el canal que deseas ver en directo. </p><br /></div>
 	
 	
 <div><p align="left"><h2>¿Qué partidos de fútbol transmite Fútbol Libre?</h2></p>
@@ -378,7 +378,7 @@
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
