--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
 <h1 class="display-4">Fútbol Libre TV</h1>
-<p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de stream para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Champions League entre otros. </p>
+<p class="lead">Ver Fútbol Libre TV online en vivo y en directo. Canales gratis de TV para ver partidos del fútbol argentino, Copa Libertadores, Copa Sudamericana y Liga 1 entre otros. </p>
 <h2 class="lead">Ver <strong>Fútbol Libre</strong> para todos.</h2>
 </div>
 <div class="container">
@@ -311,7 +311,7 @@
 <p align="left"><h2>Preguntas frecuentes</h2></p><br />
 	
 <div><p align="left"><h2>¿Qué es Fútbol Libre TV?</h2></p>
-<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales gratis en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br /></div>
+<p align="left"><a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> tiene todos los <strong>canales de televisión en vivo y en directo</strong> para ver <strong>fútbol Argentino</strong> por internet, ademas de la <strong>Copa Sudamericana</strong>, <strong>Copa Libertadores</strong>, partidos de <strong>Boca Juniors</strong> y <strong>River Plate</strong>, Selección Argentina y mucho más. </p><br /></div>
 	
 <div><p align="left"><h2>¿Cómo ver un partido por fútbol libre TV en vivo y en directo?</h2></p>
 	<p align="left"> Para ver <a href="https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> online en vivo y en directo debes ingresar a esta pagina y luego seleccionar el partido de fútbol en vivo que quieres ver que aparecen en la agenda diaria o simplemente ingresar al canal que pasa el partido a la hora del encuentro. </p><br /></div>
