--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
                     <i class='bx bx-x siderbarClose'></i>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#">ESPN</a></li>
-                    <li><a href="#">Tyc Sports</a></li>
-                    <li><a href="#">DS Sports</a></li>
-                    <li><a href="#">ESPN Premium</a></li>
-                    <li><a href="#">TV Publica</a></li>
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
                 </ul>
             </div>
             <div class="darkLight-searchBox">
