--- a/en-vivo/deportv/index.html
+++ b/en-vivo/deportv/index.html
@@ -3,18 +3,18 @@
 <!doctype html>
 <html lang="es">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="DeporTV en VIVO es un canal de televisión público argentino especializado en programación deportiva. Es operado por el Sistema Federal de Medios y Contenidos Públicos, a su vez propiedad del Estado argentino. A partir del 3 de enero de 2014 empezó a transmitir en alta definición.">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/deportv/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/deportv/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para DeporTV en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="DeporTV en VIVO es un canal de televisión público argentino especializado en programación deportiva. Es operado por el Sistema Federal de Medios y Contenidos Públicos, a su vez propiedad del Estado argentino. A partir del 3 de enero de 2014 empezó a transmitir en alta definición." />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/deportv/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/deportv/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/DeporTV.png" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/DeporTV.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Transmite NBA y Carreras Argentinas, como así también programas referidos a otros deportes como hockey sobre césped, básquet, tenis, vóleibol, rugby, entre otros, y eventos como los Juegos Nacionales Evita" />
 <meta name="twitter:title" content="Ver DeporTV en VIVO ONLINE en DIRECTO por Internet" />
@@ -105,7 +105,7 @@
 <div class="sharethis-inline-share-buttons"></div>
 
 <br />
-<img src="https://librefutboltv.com/img/logo-canal/DeporTV.png" alt="Logo del canal DeporTV" title="DeporTV en vivo"><br>
+<img src="https://https://futbollibretv.net/img/logo-canal/DeporTV.png" alt="Logo del canal DeporTV" title="DeporTV en vivo"><br>
 <p align="left"><strong>DeporTV en VIVO</strong> es un canal de televisión público argentino especializado en programación deportiva. Es operado por el Sistema Federal de Medios y Contenidos Públicos, a su vez propiedad del <strong>Estado argentino</strong>. A partir del 3 de enero de 2014 empezó a transmitir en <strong>alta definición</strong>.</p>
 <p align="left">DeporTV fue creado para el fomento del deporte argentino como promotor de valores de la sociedad. Transmitía las competencias profesionales de <strong>Fútbol para Todos</strong> y Automovilismo para todos. Actualmente transmite NBA y <strong>Carreras Argentinas</strong>, como así también programas referidos a otros <strong>deportes</strong> como hockey sobre césped, básquet, tenis, vóleibol, rugby, entre otros, y eventos como los Juegos Nacionales Evita. </p>
 <p align="left">La señal cubrió y transmitió los Juegos Olímpicos de Londres 2012, las eliminatorias y la Copa Mundial de Fútbol de 2014 y los Juegos Paralímpicos de Río de Janeiro 2016.</p>
@@ -123,7 +123,7 @@
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
