--- a/en-vivo/directv-sports-2/index.html
+++ b/en-vivo/directv-sports-2/index.html
@@ -8,20 +8,20 @@
 <meta name="description" content="DIRECTV Sports 2 es un canal de televisión deportivo exclusivo de DirecTV que transmite las 24 horas del día. Se caracteriza por tener la mejor y más completa cobertura deportiva en Latinoamérica, transmitiendo gran parte de la Liga BBVA de España en exclusiva y desde agosto de 2013 también la Premier League de Inglaterra.">
 <meta name="author" content="Fútbol Libre">
 <meta name="robots" content="noodp" />
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/directv-sports-2/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/directv-sports-2/" />
 <link rel="publisher" href="https://plus.google.com/110597823755835387054" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Click para ver Directv Sports 2 en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
 <meta property="og:description" content="DIRECTV Sports 2 es un canal de televisión deportivo exclusivo de DirecTV que transmite las 24 horas del día. Se caracteriza por tener la mejor y más completa cobertura deportiva en Latinoamérica, transmitiendo gran parte de la Liga BBVA de España en exclusiva y desde agosto de 2013 también la Premier League de Inglaterra." />
-<meta property="og:url" content="http://librefutboltv.com/en-vivo/directv-sports-2/" />
+<meta property="og:url" content="http://https://futbollibretv.net/en-vivo/directv-sports-2/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="http://librefutboltv.com/img/Directv_Sports.png" />
+<meta property="og:image" content="http://https://futbollibretv.net/img/Directv_Sports.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="DirecTV Sports en vivo es un canal de televisión por suscripción deportivo exclusivo de DirecTV. Contiene una programación variada para toda Latinoamérica" />
 <meta name="twitter:title" content="Ver DirecTV Sports  en VIVO ONLINE en DIRECTO por Internet" />
 <meta name="twitter:site" content="@futbollibre5" />
-<meta name="twitter:image" content="http://librefutboltv.com/img/Directv_Sports.png" />
+<meta name="twitter:image" content="http://https://futbollibretv.net/img/Directv_Sports.png" />
 <meta name="twitter:creator" content="@futbollibre5" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
@@ -41,19 +41,50 @@
 <meta name="msapplication-TileImage" content="../../favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <title>DirecTV Sports 2 en VIVO ONLINE - Fútbol Libre TV</title>
-
+<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <link href="../../css/bootstrap.css" rel="stylesheet">
 
 <link href="../../css/portada.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-<div id="navbar"></div>
-<script>
-            $(document).ready(function() {
-                $("#navbar").load("../../html/navbar.html");
-            });
-         </script>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
