--- a/en-vivo/directv-sports/index.html
+++ b/en-vivo/directv-sports/index.html
@@ -2,23 +2,23 @@
 <!doctype html>
 <html lang="es">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver Canal Directv Sports Premium online en vivo y en directo. Futbol Libre TV - Television gratis por internet Liga BBVA de España.">
 <meta name="author" content="Fútbol Libre">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/directv-sports/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/directv-sports/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Fútbol Libre TV. Click para ver Directv Sports en VIVO ONLINE por Internet en DIRECTO. Fútbol Argentino" />
 <meta property="og:description" content="Fútbol Libre TV. Ver Canal Directv Sports Premium online en vivo y en directo. Television gratis por internet." />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/directv-sports/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/directv-sports/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/Directv_Sports.png" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/Directv_Sports.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fútbol Libre TV Ver canal Directv Sports en VIVO ONLINE por Internet en DIRECTO." />
 <meta name="twitter:title" content="Ver Fútbol Libre TV Directv Sports en VIVO ONLINE en DIRECTO por Internet - Fútbol Libre TV" />
-<meta name="twitter:image" content="https://librefutboltv.com/img/Directv_Sports.png" />
+<meta name="twitter:image" content="https://https://futbollibretv.net/img/Directv_Sports.png" />
 <meta name="twitter:creator" content="@futbollibre5" />
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
@@ -38,21 +38,49 @@
 <meta name="msapplication-TileImage" content="../../favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <title>Ver Canal Directv Sports online en VIVO y en directo. Futbol Libre TV</title>
-
+<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <link href="/css/bootstrap.css" rel="stylesheet">
 
 <link href="/css/portada.css" rel="stylesheet">
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com/">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com/">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -97,13 +125,13 @@ Fútbol Libre TV
 	
 	<div id="item1"><h2>¿Qué es el canal DirecTV Sports en vivo?</h2>
 <p align="left"> Ver canal DirecTV Sports online en vivo y en directo. <strong>DirecTV Sports</strong> es un canal de televisión de Latinoamerica para ver en vivo todos los partidos de la Liga Española de Fútbol, Copa del Rey, Supercopa de España, partidos de la Conmebol Sudamericana, entre otros eventos deportivos.</p>
-<p align="left"> Ademas de este canal tambien se pueden ver online sus canales hermanos que son:  <a href="https://librefutboltv.com/en-vivo/directv-sports-2/" target="_blank"><strong>DirecTV Sports 2</strong></a> y <a href="https://librefutboltv.com/en-vivo/directv-sports-plus/" target="_blank"><strong>DirecTV Sports Plus</strong></a>.</p>
+<p align="left"> Ademas de este canal tambien se pueden ver online sus canales hermanos que son:  <a href="https://https://futbollibretv.net/en-vivo/directv-sports-2/" target="_blank"><strong>DirecTV Sports 2</strong></a> y <a href="https://https://futbollibretv.net/en-vivo/directv-sports-plus/" target="_blank"><strong>DirecTV Sports Plus</strong></a>.</p>
 		
 		
 <div id="item2"><h2>¿Cómo puedo ver el canal DirecTV Sports online en vivo y en directo?</h2>
 
 <p align="left">
-Para poder ver todos los partidos en vivo y en directo que transmite DirecTV Sports online se debe ir al home de la pagina <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> en el horario que se este disputando el partido y luego hacer click en el logo de <strong><a href="https://librefutboltv.com/en-vivo/directv-sports/">DirecTV Sports</a></strong> o en "<strong>Ver Canal</strong>" para acceder a la programación en vivo y en directo de DirecTV Sports. Luego al ingresar a la pagina deberá hacer click en el boton de Play en el reproductor debajo del titulo "<strong>Canal DirecTV Sports Online en VIVO y en directo</strong>". Tambien se puede ingresar a la pagina oficial de DirecTV Sports en directvsports.com para ver el canal en vivo desde la computadora, celular o desde la televisión mediante <strong>Chromecast</strong>.
+Para poder ver todos los partidos en vivo y en directo que transmite DirecTV Sports online se debe ir al home de la pagina <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> en el horario que se este disputando el partido y luego hacer click en el logo de <strong><a href="https://https://futbollibretv.net/en-vivo/directv-sports/">DirecTV Sports</a></strong> o en "<strong>Ver Canal</strong>" para acceder a la programación en vivo y en directo de DirecTV Sports. Luego al ingresar a la pagina deberá hacer click en el boton de Play en el reproductor debajo del titulo "<strong>Canal DirecTV Sports Online en VIVO y en directo</strong>". Tambien se puede ingresar a la pagina oficial de DirecTV Sports en directvsports.com para ver el canal en vivo desde la computadora, celular o desde la televisión mediante <strong>Chromecast</strong>.
 	
 	</p>
 	
@@ -114,7 +142,7 @@ Para poder ver todos los partidos en vivo y en directo que transmite DirecTV Spo
 		</p>
 		
 		<div id="item4"><h2>¿Cómo ver partidos de DirecTV Sports en vivo sin pagar?</h2>
-<p align="left"> Para ver todos los partidos que pasa <strong><a href="https://librefutboltv.com/en-vivo/directv-sports/">DirecTV Sports</a></strong> de la Liga Española, Premier League, Champions League y Europa League se puede ingresar a este canal y verlo gratis en vivo y en directo para todo el mundo.
+<p align="left"> Para ver todos los partidos que pasa <strong><a href="https://https://futbollibretv.net/en-vivo/directv-sports/">DirecTV Sports</a></strong> de la Liga Española, Premier League, Champions League y Europa League se puede ingresar a este canal y verlo gratis en vivo y en directo para todo el mundo.
 		
 	</p>
 			
@@ -133,7 +161,7 @@ Para poder ver todos los partidos en vivo y en directo que transmite DirecTV Spo
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
