--- a/en-vivo/espn-1/index.html
+++ b/en-vivo/espn-1/index.html
@@ -2,22 +2,22 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script type="text/javascript" src="/z-4834911"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="Ver canal ESPN en VIVO Online por Internet en DIRECTO. Futbol Libre TV Television gratis por internet">
-<link rel="canonical" href="https://librefutboltv.com/en-vivo/espn-1/" />
+<link rel="canonical" href="https://https://futbollibretv.net/en-vivo/espn-1/" />
 <meta property="og:locale" content="es_ES" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Fútbol Libre TV. Click para ver ESPN 1 en VIVO ONLINE por Internet en DIRECTO" />
 <meta property="og:description" content="Fútbol Libre TV. Ver canal ESPN 1 en VIVO y en directo ONLINE gratis por Internet" />
-<meta property="og:url" content="https://librefutboltv.com/en-vivo/espn-1/" />
+<meta property="og:url" content="https://https://futbollibretv.net/en-vivo/espn-1/" />
 <meta property="og:site_name" content="Fútbol Libre TV" />
-<meta property="og:image" content="https://librefutboltv.com/img/logo-canal/ESPN.webp" />
+<meta property="og:image" content="https://https://futbollibretv.net/img/logo-canal/ESPN.webp" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:description" content="Fútbol Libre TV Ver ESPN 1 en VIVO ONLINE por Internet en DIRECTO. Mirar Futbol argentino en vivo" />
 <meta name="twitter:title" content="Fútbol Libre TV Ver ESPN 1 en VIVO ONLINE en DIRECTO por Internet" />
-<meta name="twitter:image" content="https://librefutboltv.com/img/logo-canal/ESPN.webp" />
+<meta name="twitter:image" content="https://https://futbollibretv.net/img/logo-canal/ESPN.webp" />
 <meta name="author" content="Fútbol Libre">
 <link rel="apple-touch-icon" sizes="57x57" href="../../favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="../../favicon/apple-icon-60x60.png">
@@ -37,21 +37,49 @@
 <meta name="msapplication-TileImage" content="../../favicon/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <title>Ver Canal ESPN 1 online en VIVO y en directo. Futbol Libre TV</title>
-
+<link href="../css/styles.css" rel="stylesheet">
+  	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 <link href="../../css/bootstrap.css" rel="stylesheet">
 
 <link href="../../css/portada.css" rel="stylesheet">
 </head>
 <body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-<a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="https://librefutboltv.com">
-Fútbol Libre TV
-</a>
-
-<a class="btn btn-outline-fl" rel="home" href="https://librefutboltv.com">
-<img src="https://librefutboltv.com/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">
-</a>
-</div>
+<nav>
+        <div class="nav-bar">
+            <i class='bx bx-menu sidebarOpen' ></i>
+            <span class="logo navLogo"><a href="/">Futbol Libre</a></span>
+            <div class="menu">
+                <div class="logo-toggle">
+                    <span class="logo"><a href="#"><img src="/img/logo-futbolLibre.webp" alt="Logo de Fútbol Libre TV" width="25" height="25">Futbol Libre</a></span>
+                    <i class='bx bx-x siderbarClose'></i>
+                </div>
+                <ul class="nav-links">
+                    <li><a href="/en-vivo/espn-1/">ESPN</a></li>
+                    <li><a href="/en-vivo/tyc-sports/">Tyc Sports</a></li>
+                    <li><a href="/en-vivo/directv-sports
+/">DS Sports</a></li>
+                    <li><a href="/en-vivo/espn-premium/">ESPN Premium</a></li>
+                    <li><a href="/en-vivo/tv-publica/">TV Publica</a></li>
+                </ul>
+            </div>
+            <div class="darkLight-searchBox">
+                <div class="dark-light">
+                    <i class='bx bx-moon moon'></i>
+                    <i class='bx bx-sun sun'></i>
+                </div>
+                <div class="searchBox">
+                   <div class="searchToggle">
+                    <i class='bx bx-x cancel'></i>
+                    <i class='bx bx-search search'></i>
+                   </div>
+                    <div class="search-field">
+                        <input type="text" placeholder="Search...">
+                        <i class='bx bx-search'></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
 <div class="container">
 <div class="card-deck mb-3 text-center">
 <div class="card mb-4 box-shadow">
@@ -93,7 +121,7 @@ Fútbol Libre TV
 	
 	
 		<div id="item1"><h2>¿Qué es el canal ESPN 1 en vivo?</h2>
-<p align="left"> Ver canal <strong>ESPN 1</strong> online en vivo y en directo de Latinoamérica. El canal <strong>ESPN 1</strong> o mejor conocido por sus siglas (Entertainment and Sports Programming Network) es un canal que transmite todo tipo de deportes para Estados Unidos, México, Argentina, Colombia, Chile y Perú. Esta directamente conectado con sus canales hermanos <strong><a href="https://librefutboltv.com/en-vivo/espn-2/">ESPN 2</a></strong>, <strong><a href="https://librefutboltv.com/en-vivo/espn-3/">ESPN 3</a></strong> y <strong><a href="https://librefutboltv.com/en-vivo/espn-extra/">ESPN Extra</a></strong>. Los eventos mas importantes que se pueden ver en el canal <strong>ESPN 1</strong> son la UEFA Champions League, la Europa League, la Supercopa de Europa, Copa Libertadores de América, Copa Sudamericana, partidos de la Ligas Españolas (Primera y segunda división), la Liga Inglesa (Premier League), Liga Italiana, Liga Alemana (Bundesliga), y muchos eventos deportivos internacionales.
+<p align="left"> Ver canal <strong>ESPN 1</strong> online en vivo y en directo de Latinoamérica. El canal <strong>ESPN 1</strong> o mejor conocido por sus siglas (Entertainment and Sports Programming Network) es un canal que transmite todo tipo de deportes para Estados Unidos, México, Argentina, Colombia, Chile y Perú. Esta directamente conectado con sus canales hermanos <strong><a href="https://https://futbollibretv.net/en-vivo/espn-2/">ESPN 2</a></strong>, <strong><a href="https://https://futbollibretv.net/en-vivo/espn-3/">ESPN 3</a></strong> y <strong><a href="https://https://futbollibretv.net/en-vivo/espn-extra/">ESPN Extra</a></strong>. Los eventos mas importantes que se pueden ver en el canal <strong>ESPN 1</strong> son la UEFA Champions League, la Europa League, la Supercopa de Europa, Copa Libertadores de América, Copa Sudamericana, partidos de la Ligas Españolas (Primera y segunda división), la Liga Inglesa (Premier League), Liga Italiana, Liga Alemana (Bundesliga), y muchos eventos deportivos internacionales.
 	
 	
 		</p> </div>
@@ -103,7 +131,7 @@ Fútbol Libre TV
 <p align="left">
 	
 	
-	Para ver el canal de <strong><a href="https://librefutboltv.com/en-vivo/espn-1/" title="Ver ESPN 1 online en vivo y en directo por internet gratis">ESPN 1</a></strong> gratis en vivo y en directo ir a la portada de <a href="https://librefutboltv.com/"><strong>Futbol Libre TV</strong></a> en el momento del partido de la <strong>Copa Libertadores</strong> o <strong>Copa Sudamericana</strong> y hacer click en logo del canal ESPN 1 para luego en la próxima pagina darle click en <strong>Play</strong> en el reproductor localizado en la parte superior de la imagen del logo y abajo del titulo "<strong>Canal ESPN 1 Online en VIVO y en directo</strong>". Ahí obtendrá diferentes opciones para ver el canal en vivo y en directo. La opción oficial de <strong><a href="https://librefutboltv.com/en-vivo/espn-1/" title="Ver ESPN 1 online en vivo y en directo por internet gratis">ESPN 1</a></strong> se puede ver en streaming en su pagina de EspnPlay.com donde que permite usar desde la <strong>computadora</strong>, <strong>celular</strong> o directamente del sistema <strong>Chromecast</strong>. </div> </p>
+	Para ver el canal de <strong><a href="https://https://futbollibretv.net/en-vivo/espn-1/" title="Ver ESPN 1 online en vivo y en directo por internet gratis">ESPN 1</a></strong> gratis en vivo y en directo ir a la portada de <a href="https://https://futbollibretv.net/"><strong>Futbol Libre TV</strong></a> en el momento del partido de la <strong>Copa Libertadores</strong> o <strong>Copa Sudamericana</strong> y hacer click en logo del canal ESPN 1 para luego en la próxima pagina darle click en <strong>Play</strong> en el reproductor localizado en la parte superior de la imagen del logo y abajo del titulo "<strong>Canal ESPN 1 Online en VIVO y en directo</strong>". Ahí obtendrá diferentes opciones para ver el canal en vivo y en directo. La opción oficial de <strong><a href="https://https://futbollibretv.net/en-vivo/espn-1/" title="Ver ESPN 1 online en vivo y en directo por internet gratis">ESPN 1</a></strong> se puede ver en streaming en su pagina de EspnPlay.com donde que permite usar desde la <strong>computadora</strong>, <strong>celular</strong> o directamente del sistema <strong>Chromecast</strong>. </div> </p>
 	
 	
 	
@@ -114,14 +142,14 @@ Fútbol Libre TV
 	
 	
 	<div id="item4"><h2>¿Cómo ver los partidos de la Copa Libertadores y Copa Sudamericana en directo sin pagar?</h2>
-<p align="left">Tanto <strong><a href="https://librefutboltv.com/en-vivo/espn-1/" title="Ver ESPN 1 online en vivo y en directo por internet gratis">ESPN 1</a></strong> como <strong><a href="https://librefutboltv.com/en-vivo/espn-2/" title="Ver ESPN 2 online en vivo y en directo por internet gratis">ESPN 2</a></strong>, <strong><a href="https://librefutboltv.com/en-vivo/espn-3/" title="Ver ESPN 3 online en vivo y en directo por internet gratis">ESPN 3</a></strong> y <strong><a href="https://librefutboltv.com/en-vivo/espn-extra/" title="Ver ESPN Extra online en vivo y en directo por internet gratis">ESPN Extra</a></strong> transmiten en vivo y en directo todos los partidos de Copa Libertadores y Copa Sudamericana, junto con también la mayoría de los eventos deportivos de Europa.
+<p align="left">Tanto <strong><a href="https://https://futbollibretv.net/en-vivo/espn-1/" title="Ver ESPN 1 online en vivo y en directo por internet gratis">ESPN 1</a></strong> como <strong><a href="https://https://futbollibretv.net/en-vivo/espn-2/" title="Ver ESPN 2 online en vivo y en directo por internet gratis">ESPN 2</a></strong>, <strong><a href="https://https://futbollibretv.net/en-vivo/espn-3/" title="Ver ESPN 3 online en vivo y en directo por internet gratis">ESPN 3</a></strong> y <strong><a href="https://https://futbollibretv.net/en-vivo/espn-extra/" title="Ver ESPN Extra online en vivo y en directo por internet gratis">ESPN Extra</a></strong> transmiten en vivo y en directo todos los partidos de Copa Libertadores y Copa Sudamericana, junto con también la mayoría de los eventos deportivos de Europa.
 	
 	</p> </div>	
 	
 
 	
 	
-<p align="center"><img src="https://librefutboltv.com/img/logo-canal/ESPN.webp" alt="logo del canal ESPN 1" title="ESPN en vivo Online" width="%50" height="140" /></p>
+<p align="center"><img src="https://https://futbollibretv.net/img/logo-canal/ESPN.webp" alt="logo del canal ESPN 1" title="ESPN en vivo Online" width="%50" height="140" /></p>
 	
 	
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
@@ -137,7 +165,7 @@ Fútbol Libre TV
 <div class="col-6 col-md">
 <h5>Fútbol Libre</h5>
 <ul class="list-unstyled text-small">
-<li><a class="text-muted" href="https://librefutboltv.com/DMCA.html">DMCA</a></li>
+<li><a class="text-muted" href="https://https://futbollibretv.net/DMCA.html">DMCA</a></li>
 <br />
 <div style="text-align:center;">
 <small class="d-block mb-3 text-muted">Fútbol Libre TV 2023 &copy; Todos los derechos reservados.</small>
